CB-17698 Upgrading to Java 17
There are a lot of changes happened:
- Upgraded to Gradle 8.1.1
- Updated Docker files' base image to use OpenJDK 17
- Updated build dependencies, forcing them at some point
- Sprinfox hack because of backward incompatibility
- Utilizing "--add-opens" switch in autoscale and in unit tests as we have wierd solutions at a few places
- Newer and stricter Checkstyle is introduced
- Reserved SQL keyword column names must be quoted because of stricter check in H2 in testing
- JDK classes cannot be modified by default so some hacks are introduced (temporarily)

Co-authored-by: Dénes Berger <dberger@cloudera.com>
Co-authored-by: Lajos Rodek <lrodek@cloudera.com>