@@ -28,12 +28,13 @@ bootRun {
 }
 
 bootRun {
-  main = 'com.sequenceiq.mock.MockInfrastructureApplication'
+  jvmArgs += ['--add-opens','java.base/java.util=ALL-UNNAMED']
+  mainClass = 'com.sequenceiq.mock.MockInfrastructureApplication'
 }
 
 bootJar {
-  baseName = 'mock-infrastructure'
-  archiveName = 'mock-infrastructure.jar'
+  archiveBaseName = 'mock-infrastructure'
+  archiveFileName = 'mock-infrastructure.jar'
   manifest {
     def grgit = Grgit.open(currentDir: project.projectDir)
     attributes "Implementation-Version": grgit.describe()
@@ -64,13 +65,13 @@ dependencies {
   implementation group:  'org.springframework.boot',     name: 'spring-boot-starter-jersey',     version: springBootVersion
   implementation group:  'org.springframework.boot',     name: 'spring-boot-starter-web',        version: springBootVersion
   implementation group:  'org.springframework.boot',     name: 'spring-boot-starter-actuator',   version: springBootVersion
-  implementation group: 'org.springframework',    name: 'spring-aspects',                 version: springFrameworkVersion
+  implementation group:  'org.springframework',          name: 'spring-aspects',                 version: springFrameworkVersion
   implementation group:  'org.springframework',          name: 'spring-context-support',         version: springFrameworkVersion
   implementation group:  'org.springframework.security', name: 'spring-security-jwt',            version: '1.1.1.RELEASE'
   implementation group:  'com.fasterxml.jackson.core',   name: 'jackson-core',                   version: jacksonVersion
   implementation group:  'com.google.protobuf',          name: 'protobuf-java-util',             version: protobufVersion
   implementation group:  'io.jsonwebtoken',              name: 'jjwt',                           version: '0.9.1'
-  implementation group:  'com.google.code.gson',              name: 'gson',                           version: gsonVersion
+  implementation group:  'com.google.code.gson',         name: 'gson',                           version: gsonVersion
   testImplementation group: 'org.mockito',               name: 'mockito-core',                   version: mockitoVersion
   testImplementation group: 'org.springframework.boot',  name: 'spring-boot-starter-test',       version: springBootVersion
   testImplementation group: 'org.assertj',        name: 'assertj-core',                   version: assertjVersion
